2008-11-30  Christian Dywan  <christian@imendio.com>

	Bug 554076 – eventually release g_new-ed supported_atoms

	* gdk/x11/gdkevents-x11.c (cleanup_atoms),
	(gdk_x11_screen_supports_net_wm_hint): Set cleanup callback.
        Patch by Caolan McNamara.

2008-11-30  Christian Dywan  <christian@imendio.com>

	Bug 539263 – Deprecate gdk_window_get_toplevels

	* gdk/gdkwindow.c:
	* gdk/gdkwindow.h: Deprecate gdk_window_get_toplevels

2008-11-29  Federico Mena Quintero  <federico@novell.com>

	* gtk/gtktreeview.c (gtk_tree_view_bin_expose): If tree lines are
	enabled, flip them around for the right-to-left case.  Fixes
	https://bugzilla.novell.com/show_bug.cgi?id=447004.  Patch by
	Ricardo Cruz <rpmcruz@alunos.dcc.fc.up.pt>

2008-11-29  Christian Persch  <chpe@gnome.org>

	* gtk/gtkselection.c: Typo fix.

2008-11-29  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkselection.c:
	* gtk/gtkentry.c:
	* gtk/gtkdnd.c:
	* gtk/gtkcolorsel.c:
	* gtk/gtkbindings.c: Improve deprecation annotations.

2008-11-26  Christian Dywan  <christian@imendio.com>

	Bug 561504 – testgtk should load rc file from sub folder

	* tests/testgtk.c (main):
        Make testgtk look in subfolder and warn if not found

2008-11-25  Johan Dahlin  <jdahlin@async.com.br>

	Bug 559947 – Unchecked dependency on python>=2.4

	* gtk/gtk-builder-convert:
	Avoid using sorted() which is only present in python 2.

2008-11-24  Tristan Van Berkom <tvb@gnome.org>

	* gtk/gtkalignment.c: Bug 561539 - Fix warnings when size allocations
	fall short of border width and padding.

2008-11-22  Paul Bolle  <pebolle@tiscali.nl>

	Bug 561335 - Fix typos in GtkToolItem documentation

	* gtk/gtktoolitem.c: Fix typos in GtkToolItem documentation

2008-11-21  Matthias Clasen <mclasen@redhat.com>

	* configure.in: Bump gtk-doc dependency to 1.11 for
	nicer index-generation.

2008-11-21  Matthias Clasen <mclasen@redhat.com>

	* gtk/gtkmountoperation.[hc]: Declare structs in a way that
	gtk-doc understands.
